--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^3.0.1",
-    "react-toastify": "^10.0.5",
+    "react-toastify": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,5 +50,8 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4"
+  },
+  "resolutions": {
+    "some-package": "version"
   }
 }
