--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
-  }
+    "tailwindcss": "^3.4.1",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
+  },
+  "homepage": "."
 }
