--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,5 +46,5 @@
     "tailwindcss": "^3.4.1",
     "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   },
-  "homepage": "."
+  "homepage": "./"
 }
